syntax = "proto3";
package bpfd.v1;
option go_package = "github.com/redhat-et/clients/gobpfd/v1;v1";

service Loader {
    rpc Load (LoadRequest) returns (LoadResponse);
    rpc Unload (UnloadRequest) returns (UnloadResponse);
    rpc List (ListRequest) returns (ListResponse);
}

enum ProgramType {
    XDP = 0;
    TC = 1;
    TRACEPOINT = 2;
}

enum Direction {
    NONE = 0;
    INGRESS = 1;
    EGRESS = 2;
}

enum ProceedOn {
    ABORTED = 0;
    DROP = 1;
    PASS = 2;
    TX = 3;
    REDIRECT = 4;
    DISPATCHER_RETURN = 31;
}

message LoadRequest {
    oneof location {
        BytecodeImage image = 1;
        string file = 2;
    } ;
    string section_name = 3;
    ProgramType program_type = 4;
    oneof attach_type {
        NetworkMultiAttach network_multi_attach = 5;
        SingleAttach single_attach = 6;
    }
	map<string, bytes> global_data = 7;
};

enum ImagePullPolicy {
    Always = 0;
    IfNotPresent = 1;
    Never = 2;
}

message BytecodeImage {
    string url = 1;
    ImagePullPolicy image_pull_policy = 2;
    string username = 3;
    string password = 4;
}

message NetworkMultiAttach {
    int32 priority = 1;
    string iface = 2;
    int32 position = 3;
    Direction direction = 4;
    repeated ProceedOn proceed_on = 5;
}

message SingleAttach {
    string name = 1;
}

message LoadResponse {
    string id = 1;
}

message UnloadRequest {
    string id = 1;
}

message UnloadResponse {}

message ListRequest {}

message ListResponse {
  message ListResult {
    string id = 1;
    string name = 2;
    oneof location {
        BytecodeImage image = 3;
        string file = 4;
    } ;
    ProgramType program_type = 5;
    oneof attach_type {
        NetworkMultiAttach network_multi_attach = 6;
        SingleAttach single_attach = 7;
    }
  }
  repeated ListResult results = 2;
}
